--- a/mec-3.4.1-api-mini-project/api_data_wrangling_mini_project.ipynb
+++ b/mec-3.4.1-api-mini-project/api_data_wrangling_mini_project.ipynb
@@ -345,8 +345,7 @@
    "source": [
     "# 6. What was the average daily trading volume during this year?\n",
     "dailyVolume = [col[5] for col in data['dataset']['data'] if col[5] !=5]\n",
-    "avg_dVol = round(sum(dailyVolume)/len(dailyVolume),1)\n",
-    "print('Average daily trading volume during 2017:',avg_dVol)"
+    "avg_dVol = round(sum(dailyVolume)/len(dailyVolume),1)\n"
    ]
   },
   {
@@ -380,13 +379,6 @@
     "arr = [2,2,4,5,5,6,7,8]\n",
     "findMedian(sorted_dailyVolume)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
