--- a/mec-5.4.4-json-data-wrangling-mini-project/Mini_Project_Wrangling_Json_Exercise.ipynb
+++ b/mec-5.4.4-json-data-wrangling-mini-project/Mini_Project_Wrangling_Json_Exercise.ipynb
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -1294,14 +1294,14 @@
        "[1499 rows x 2 columns]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mjthemes['name'] = mjthemes['code']\n",
-    "mjthemes['name'].replace(to_replace=codes.index.values,value=codes.values,inplace=True)\n",
+    "mjthemes['name'].replace(codes.index.values,codes.values,inplace=True)\n",
     "mjthemes"
    ]
   }
