--- a/mec-5.4.4-json-data-wrangling-mini-project/Mini_Project_Wrangling_Json_Exercise.ipynb
+++ b/mec-5.4.4-json-data-wrangling-mini-project/Mini_Project_Wrangling_Json_Exercise.ipynb
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -1170,13 +1170,14 @@
        "9                           Economic management    38"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame([codes.name,mjthemes_code_vc]).transpose().sort_values(by='count',ascending=False).reset_index(drop=True)[:10]"
+    "top10 = pd.DataFrame([codes.name,mjthemes_code_vc]).transpose().sort_values(by='count',ascending=False).reset_index(drop=True)[:10]\n",
+    "top10"
    ]
   },
   {
